// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert tab dynamically 1`] = `
<div class="zv-tabs zv-tabs--line">
  <div class="zv-tabs__wrap zv-hairline--top-bottom">
    <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
      <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">1<!----></span></div>
      <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text">2<!----></span></div>
      <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">3<!----></span></div>
      <div class="zv-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
    <div>
      <div role="tabpanel" class="zv-tab__pane">2</div>
    </div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">3</div>
  </div>
</div>
`;

exports[`insert tab with child component 1`] = `
<div class="zv-tabs zv-tabs--line">
  <div class="zv-tabs__wrap zv-hairline--top-bottom">
    <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
      <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text">1<!----></span></div>
      <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">2<!----></span></div>
      <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">3<!----></span></div>
      <div class="zv-tabs__line"></div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane">1</div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;
